# blink

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  draft.h
cmake/: blink-common-config.cmake.in
dope/: deps.yml
include/: blink.h  blink_effect.h  blink_generator.h  blink_sampler.h  blink_std.h  blink_synth.h  blkhdgen.h  blkhdgen_effect.h  blkhdgen_generator.h  blkhdgen_sampler.h
include/blkhdgen/: draft.h
lib/: CMakeLists.txt
lib/blink/: blink_host_impl.hpp  blink_plugin_impl.hpp  blink_plugin_sampler_impl.hpp  block_positions.hpp  common_impl.hpp  const_math.hpp  data.hpp  dsp.hpp  entity_store.hpp  host_impl.hpp  math.hpp  plugin_impl.hpp  quiet-include.hpp  resource_store.hpp  sample_data.hpp  search.hpp  traverser.hpp  tweak.hpp  types.hpp
lib/blink/transform/: stretch.hpp  tape.hpp
lib/blink/transform/calculators/: pitch.hpp  reverse.hpp  speed.hpp  warp.hpp
lib/cmake/Modules/: blink_plugin.cmake
lib/host/: CMakeLists.txt
lib/host/cmake/: blink-host-config.cmake.in
lib/host/test/: CMakeLists.txt
lib/host/test/src/: main.cpp
lib/plugin/: CMakeLists.txt
lib/plugin/cmake/: blink-plugin-config.cmake.in  blink-plugin-funcs.cmake
lib/plugin/cmake/Modules/: blink_plugin.cmake
lib/plugin/test/: CMakeLists.txt
lib/plugin/test/src/: main.cpp
plugin/blink/: .slider.hpp.swp  CMakeLists.txt  bind.hpp  bind_effect.hpp  bind_sampler.hpp  bind_synth.hpp  bits.hpp  blink_plugin_impl.hpp  block_positions.hpp  chord_data.hpp  chord_parameter.hpp  chord_spec.hpp  dsp.hpp  effect.hpp  effect_instance.hpp  effect_plugin.hpp  effect_unit.hpp  envelope.hpp  envelope_data.hpp  envelope_parameter.hpp  envelope_parameter_spec.hpp  envelope_range.hpp  envelope_range_attribute.hpp  envelope_search.hpp  envelope_snap_settings.hpp  envelope_spec.hpp  errors.hpp  generator.hpp  generator_base.hpp  group.hpp  instance.hpp  math.hpp  mlext.hpp  option_data.hpp  option_parameter.hpp  option_spec.hpp  parameter.hpp  parameter_spec.hpp  plugin.hpp  range.hpp  (+23 more)
plugin/blink/manipulators/: manipulator_chord_target.hpp  manipulator_chord_target_spec.hpp  manipulator_option_target.hpp  manipulator_option_target_spec.hpp  manipulator_slider_target.hpp  manipulator_slider_target_spec.hpp  manipulator_target.hpp  manipulator_target_data.hpp  manipulator_target_spec.hpp  manipulator_toggle_target.hpp  manipulator_toggle_target_spec.hpp
plugin/blink/parameters/: chord_data.hpp  chord_parameter.hpp  chord_spec.hpp  envelope_manipulator_target.hpp  envelope_manipulator_target_spec.hpp  envelope_parameter.hpp  envelope_parameter_spec.hpp  group.hpp  manipulator_envelope_target.hpp  manipulator_envelope_target_spec.hpp  manipulator_slider_target.hpp  manipulator_slider_target_spec.hpp  option_data.hpp  option_parameter.hpp  option_spec.hpp  parameter.hpp  parameter_spec.hpp  slider_parameter.hpp  slider_parameter_spec.hpp  toggle_data.hpp  toggle_parameter.hpp  toggle_spec.hpp
plugin/blink/standard_parameters/: all.hpp  amp.hpp  delay_time.hpp  dry.hpp  feedback.hpp  filter_frequency.hpp  formant.hpp  harmonics_amount.hpp  harmonics_scale.hpp  harmonics_spread.hpp  linear.hpp  loop.hpp  mix.hpp  ms.hpp  noise_amount.hpp  noise_color.hpp  noise_mode.hpp  noise_width.hpp  pan.hpp  percentage.hpp  pitch.hpp  resonance.hpp  reverse.hpp  sample_offset.hpp  scale.hpp  search.hpp  speed.hpp  wet.hpp
plugin/blink/standard_traversers/: classic.hpp  fudge.hpp  warp.hpp
plugin/blink/transform/: correction_grains.hpp  stretch.hpp  tape.hpp
plugin/blink/transform/calculators/: pitch.hpp  reverse.hpp  speed.hpp  warp.hpp
plugin/blkhdgen/: bind.hpp  cached.hpp  chord_parameter.hpp  envelope_parameter.hpp  envelope_range.hpp  envelope_range_attribute.hpp  envelope_search.hpp  envelope_snap_settings.hpp  envelope_spec.hpp  generator.hpp  generator_base.hpp  group.hpp  math.hpp  option_parameter.hpp  option_spec.hpp  parameter.hpp  parameter_spec.hpp  plugin.hpp  range.hpp  range_spec.hpp  range_value.hpp  sample_data.hpp  sampler.hpp  slider.hpp  slider_parameter.hpp  slider_parameter_spec.hpp  slider_spec.hpp  standard_parameters.hpp  toggle_parameter.hpp  toggle_spec.hpp  traverser.hpp
plugin/blkhdgen/standard_traversers/: classic.hpp
